# sqlite3-cmake

./: CMakeLists.txt  README.md  sqlite3-config.cmake  update.js  update.sh
.github/: renovate.json
.github/workflows/: check-for-updates.yml
